Added TextRender class, fixed loading resources, added fps metric overlay